# ChangeLog for games-arcade/bub-n-bros
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/bub-n-bros/ChangeLog,v 1.21 2015/01/01 06:01:49 mr_bones_ Exp $

*bub-n-bros-1.6.2 (01 Jan 2015)

  01 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org> +bub-n-bros-1.6.2.ebuild,
  +files/bub-n-bros-1.6.2-home.patch:
  version bump

  04 May 2010; Tupone Alfredo <tupone@gentoo.org> bub-n-bros-1.6.ebuild:
  Force python2 fixing bug #312231 by arfrever@gentoo.org

  28 Jun 2008; Tobias Klausmann <klausman@gentoo.org> bub-n-bros-1.6.ebuild:
  Stable on alpha, bug #227651

  22 Jun 2008; Markus Meier <maekke@gentoo.org> bub-n-bros-1.6.ebuild:
  amd64/x86 stable, bug #227651

  21 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> bub-n-bros-1.6.ebuild:
  Stable on sparc, bug #227651

  19 Jun 2008; nixnut <nixnut@gentoo.org> bub-n-bros-1.6.ebuild:
  Stable on ppc wrt bug 227651

*bub-n-bros-1.6 (09 Sep 2007)

  09 Sep 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +files/bub-n-bros-1.6-home.patch, +files/bub-n-bros-1.6-python25.patch,
  +bub-n-bros-1.6.ebuild:
  version bump (bug #191714) with patch update from Tomasz Mon

  13 Aug 2007; Santiago M. Mola <coldwind@gentoo.org>
  +files/bub-n-bros-1.5-python25.patch, bub-n-bros-1.5.ebuild:
  Fixed compilation w/ python-2.5 wrt bug #185819, thanks to Luis Medinas.

*bub-n-bros-1.5 (08 Jun 2007)

  08 Jun 2007; Tristan Heaven <nyhm@gentoo.org> +files/bub-n-bros-1.5-home.patch,
  +bub-n-bros-1.5.ebuild:
  Version bump by Tomasz Mon, bug #78823

  09 Apr 2007; Peter Weller <welp@gentoo.org> bub-n-bros-1.1.ebuild:
  Keyworded ~x86-fbsd wrt bug 173405

  12 Mar 2007; Marius Mauch <genone@gentoo.org> bub-n-bros-1.1.ebuild:
  Replacing einfo with elog

  08 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  11 Aug 2005; Olivier Crête <tester@gentoo.org> bub-n-bros-1.1.ebuild: