@@ -3,7 +3,7 @@ AUX bub-n-bros-1.6-python25.patch 1066 SHA256 57534f2e7b94fe48d4c6da20dd16257136
 AUX bub-n-bros-1.6.2-home.patch 2035 SHA256 13bfced9b7b4bbb543ba32fa209bcf7d313a2f6c0dda979d71dba83dd717ff95 SHA512 77362d4b1daa02f59daa34bc31f6a68506a14eaa4633d04ee3f21f9c8244089e35568bff001a997659de07a4640af84d2ed14807242561e876634d7192f8ab34 WHIRLPOOL 4386739ee5bb2ae406daec9981da4ef3e56ecd9ee04ea30807b37cb796874827826031b50c2e38fbb37d3ddf3585575c8f9da104ccd099f8091ca023e090dc8d
 DIST bubbros-1.6.2.tar.gz 11568771 SHA256 0ad8a359c4632071a9c85c2684bae32aa0fa278632c49f092dc4078cfb9858c4 SHA512 a05fca8e31655e4bade60cd085f29796d789b349f005c715bf0e37e51f0bacb9d8b9650f3b10470917ee25421d32443e01132816a2f508e359302aa2c6d18ddb WHIRLPOOL 6ed0f68cab694399aef4c75ab0633c9c355cbc5328c72fffacd20612c6cf0cc67b06db65dc808307bd036caba19f1d7e35fedd6c756104e9c1c5ce1054b8a43f
 DIST bubbros-1.6.tar.bz2 9052959 SHA256 dd197e60a23e09800010f3a5906feb77847e6eeaa7cfd47d803a85daa0bcf255 SHA512 6f798363d0b4e6cb8f15b2d3e09f30ed34e9a5066a7dc1b96dfc4f413f07f2d042cdc8c6bd8a721df1bc1f677c11790461047fbf8ddd63d889c8c71f61b0711e WHIRLPOOL a0ca4fdddbbdbab80ac63bf8d92e2396350e59b507a2dd78a797c2c732e6bddc9a911e96a307a6698c45ce01254f136be77ddfc92cb165662dd5fb7d5b02f47c
-EBUILD bub-n-bros-1.6.2.ebuild 1594 SHA256 6cf8f57c07cb2bf23b2d9bc809925a648d514a745caa1a070b19dd278bc3519a SHA512 500888fed12769b0a86ae5a0bcdf1c06ca3a2b69bcba79ad2a4dde3d90fad82b3994d2e231e56606b793de07fbde0212aad02e17764950a0ec985080ae2fc0d7 WHIRLPOOL 9716dfd1621df40adb67f0187ddf277c74e6744b17a9a9644023e9962b07be84100ea31e9ae5c197bb0c647e3b02380b26cf5de3fbbb34e7ff147967014cd324
+EBUILD bub-n-bros-1.6.2.ebuild 1587 SHA256 c0531cf1b74ee97780c6c35f2b7b665a0ac8bc80ec1a099bf8e839eef0cbe907 SHA512 e8da3b0acfdc42cf514043888a1b11fe60e86bbfdf7cc9a91258326106254d85e53fc2604acdd15af1678e830efb44825bdad3ccba0c02c4372baa583a8fb93f WHIRLPOOL c4bc38f39a26170cc4bf6e9567866bbefee73c2358049c0d2e83aa0453c7338418f575e79fd65b52384b760ecf58fefa686eef9391d165089c693c0aa3d5eab0
 EBUILD bub-n-bros-1.6.ebuild 1549 SHA256 3e65f8af5909346ce5b085b69c435a51effc6d5418f31b61202be9cc049021b2 SHA512 7826be3052e760d361133061319f01df9c4a30d7c876dc818611f05fdb08098854025cc3606dfb65dffb373a8662d5099383a67761177076191b07ba3c7275e4 WHIRLPOOL 8dcfcfaeaf7e3262e518cddaae1b6c299e6c42753c84c645cd79a5f1aa450f323901fc3c9d14fa1cce85971d7ff45a135e76184dacb916df8612df2a320f17a3
-MISC ChangeLog 2599 SHA256 e919c9873485bafe8481405b3b47e4df3828d6ec805aa1a2cd20382be1b47611 SHA512 67890a3fde6f1f24446916a7a8101e8388da23af305422a0cff2ffb3173c610b8c94f3ab6106e18e90175dbffc05d2e0089b9422c2d975de2b0019ae6b522794 WHIRLPOOL d7548e958767733137e598b83e4c0b7d2f7a38325c2ac1130f39eb9d9671ece529a17358d24602da0304c4d8c191126325837cd5a789ca29feca23030294a585
+MISC ChangeLog 2686 SHA256 856128753f49887ee883135798ab52f08337ad3776b7810d3d98af8a27a13c0e SHA512 b64172299cb0e4a66e34dfead539750deeb245be5f19d9a8826a1177135d90b6933b0a6d3bbe8430eb0769b78053d3ae6388b4bbd8094e94f425e28d3e67f10c WHIRLPOOL 2abf2a69449800d83a66184299a494576f2e7078d2e89d888fc8e4ffe84eb5babcb736293271c9f98aaa182551caf0c1c0e2af812ed1c28ade54f6d0bb1234c8
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
