@@ -1,6 +1,9 @@
 # ChangeLog for games-arcade/bub-n-bros
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/bub-n-bros/ChangeLog,v 1.21 2015/01/01 06:01:49 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/bub-n-bros/ChangeLog,v 1.22 2015/01/01 09:21:35 patrick Exp $
+
+  01 Jan 2015; Patrick Lauer <patrick@gentoo.org> bub-n-bros-1.6.2.ebuild:
+  Whitespace
 
 *bub-n-bros-1.6.2 (01 Jan 2015)
 
